--- a/#source/scss/calories.scss
+++ b/#source/scss/calories.scss
@@ -5,21 +5,25 @@
 @import "variables.scss";
 @import "common.scss";
 @import "footer.scss";
+@import "arrow.scss";
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
 .section-main{
-    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ), url(../img/pitanie/pitanie-bg-3.jpg) center 70% no-repeat;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/calories/main-bg.jpg) center no-repeat;
+
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 200px;
+    display: flex;
     height: 100vh;
     min-height: 800px;
     padding-top: 200px;
+    align-items: center;
     &__container{
-        
+
     }
     &__title{
-        font-size: 60px;
+        font-size: 80px;
         font-weight: 700;
         margin-bottom: 50px;
         text-align: center;
@@ -31,66 +35,21 @@
     
 }
 /* ------------------------------------------------------------------------------------------ */
-.section-calculator{
-    padding: 100px 0;
+.section-calories{
+    background-image: url(../img/calories/cal-bg.png);
+    background-size: 30%;
+    padding:  0;
     background-color: $white-color;
     color:$black-color;
-    .calories__table{
-        width: 80%;
-        margin: 0 auto;
+    .section-inner{
+        background-color: #fff;
+        padding-top:  50px;
     }
-    .article__table{
-        overflow: hidden;
-        
-        margin: 0;
-        border-radius: 6px;
-        box-shadow: rgb(0 0 0 / 25%) 0px 2px 9px;
-    }
-    .article__table-title{
-        font-size: 25px;
-        line-height: 27px;
-        font-weight: 700;
-        padding: 12px 10px;
-    }
-    .article__table-wr{
-        font-size: 20px;
-        table{
-            width: 100%;
-            thead{
-                background-color: $red-color;
-                color:$white-text-color;
-                td{
-                    padding: 5px;
-           
-                }
-            }
-            tbody{
-               
-                td{
-                    padding: 5px;
-                    border-bottom: 1px solid #d9d9d9;
-           
-                }
-            }
-        }
-
-        
-
-
-        
-    }
-    .article__block__h3{
-        margin: 20px 0 35px;
-        font-size: 30px;
-    }
-    tr{
-       td{
-        &:first-child{width: 40%;}
-        &:not(:first-child){width: 15%;}
-
-        
-        } 
-    }
+    .calories__title{
+        text-align: center;
+        font-size: 40px;
+        margin-bottom: 40px;
+    }   
     .calories__links {
         width: 80%;
         margin: 0 auto;
@@ -98,6 +57,7 @@
         flex-wrap: wrap;
         gap: 15px;
         justify-content: center;
+        margin-bottom: 40px;
         .links__item {
             a{
                 display: block;
@@ -105,13 +65,13 @@
                 height: 100px;
                 background-color: rgba(221, 211, 211, 0.705);
                 border-radius: 5px;
-                box-shadow: rgb(0 0 0 / 25%) 0px 2px 9px;
-                transition: all 0.3s ease-in;
+                box-shadow: rgb(0 0 0 / 25%) 0px 1px 2px;
+                transition: all 0.15s ease-in;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 &:hover{
-                    box-shadow: none;
+                    box-shadow: rgb(0 0 0 / 25%) 0px 5px 11px;
                 }
                 img{
                     max-width: 70px;
@@ -121,10 +81,66 @@
             }
         }
     }
+    .calories__table{
+        width: 80%;
+        margin: 0 auto;
+        .article__table{
+            overflow: hidden;
+            
+            margin: 0;
+            border-radius: 6px;
+            box-shadow: rgb(0 0 0 / 25%) 0px 2px 9px;
+        }
+        .article__table-title{
+            font-size: 25px;
+            line-height: 27px;
+            font-weight: 700;
+            padding: 12px 10px;
+        }
+        .article__table-wr{
+            font-size: 20px;
+            table{
+                width: 100%;
+                thead{
+                    background-color: $red-color;
+                    color:$white-text-color;
+                    td{
+                        padding: 5px;
+               
+                    }
+                }
+                tbody{
+                   
+                    td{
+                        padding: 5px;
+                        border-bottom: 1px solid #d9d9d9;
+               
+                    }
+                }
+            }
+    
+            
     
     
+            
+        }
+        .article__block__h3{
+            margin: 20px 0 35px;
+            font-size: 30px;
+        }
+        tr{
+           td{
+            &:first-child{width: 40%;}
+            &:not(:first-child){width: 15%;}
     
+            
+            } 
+        }
     }
 
+    }
+
+
       
+
 
