--- a/#source/scss/calcs.scss
+++ b/#source/scss/calcs.scss
@@ -17,9 +17,7 @@
     height: 100vh;
     min-height: 800px;
     padding-top: 200px;
-    &__container{
-        
-    }
+
     &__title{
         font-size: 60px;
         font-weight: 700;
@@ -38,6 +36,7 @@
         .section-main__button{
             flex-basis: 30%;
             a{
+                font-size: 20px;
                 display: block;
                 text-align: center;
                 padding: 20px;
@@ -139,9 +138,7 @@
     }
 }
 
-.fusion-text{
 
-}
 .calc-wrap{
     #calories{
         display: flex;
@@ -209,11 +206,7 @@
                 text-align: center;
                 margin-bottom: 10px;
             }
-            .goal{
-                p{
-                    
-                }
-            }
+
             .activity{
                 .a-width{
                     font-size: 20px;
@@ -222,9 +215,7 @@
                 }
             }
         }
-        .result-button {
 
-        }
         .results{
             width: 100%;
             .main-result{
