--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -271,7 +271,10 @@
         .section-trens__list{
             display: flex;
             gap:50px;
+            flex-basis: 30%;
             .list__item{
+                flex-grow: 1;
+                width: 100%;
                 .item__image{
                     display: flex;
                     justify-content: center;
@@ -285,6 +288,7 @@
                 .item__title{
                     font-size: 30px;
                     margin-bottom: 20px;
+                    text-align: center;
                 }
                 .item__text{
                     font-size: 20px;
@@ -296,5 +300,75 @@
 
     }
 }/* ------------------------------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------------------------relax*/
+.section-relax{
+    background-color: $white-color;
+    padding-top: 100px;
+    padding-bottom: 100px;color:$black-text-color;
+    .section-relax__container{
+        max-width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .section-relax__title{
+            h2{
+                
+                font-size: 60px;  
+            }
+            margin-bottom: 50px;
+        }
+        .section-relax__text{
+                font-size: 30px;
+            margin-bottom: 50px;
+            max-width: 70%;
+        }
+        .section-relax__list{
+            display: flex;
+            gap:50px;
+            flex-basis: 30%;
+            .list__item{
+                border: 5px solid $red-color;
+                border-radius: 10px;
+                padding: 10px;
+                flex-grow: 1;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                .item__image{
+                    display: flex;
+                    justify-content: center;
+                    margin-bottom: 20px;                    
+                    flex-grow: 0;
+                    align-items: center;
+                    
+                    img{
+                        width: auto;
+                        height: auto;
+                        max-height: 150px;
+                        
+                    }
+                }
+                .item__title-and-text
+                {
+                   .item__title{
+                    flex-basis: 20%;
+                    flex-grow: 1;
+                    font-size: 30px;
+                    margin-bottom: 20px;
+                    text-align: center;
+                }
+                .item__text{
+                    flex-grow: 1;
+                    flex-basis: 30%;
+                    font-size: 20px;
 
+                } 
+                }
+                
+            }
+           
+        }
+
+    }
+}/* ------------------------------------------------------------------------------------------ */
 
