--- a/#source/scss/header.scss
+++ b/#source/scss/header.scss
@@ -1,5 +1,6 @@
 @import "variables.scss";
 @import "null.scss";
+@import "common.scss";
 // header
 .section-header{
     position: absolute;
@@ -23,16 +24,108 @@
         }
     }
     .header__nav{
-        display: flex;
-        .nav__item{
-            margin-right: 35px;
-            font-weight: 600;
-            font-family: 'Montserrat';
-            font-size: 16px;
-            line-height: 29px;
-            text-align: center;
-            color: $white-text-color;
+        .header__nav-list{
+            display: flex;
+            
+            .nav__item{
+                margin-right: 2vw;
+                font-weight: 600;
+                font-family: 'Montserrat';
+                font-size: 16px;
+                line-height: 29px;
+                text-align: center;
+                color: $white-text-color;
+            }
         }
+
+        .burger {
+            width: 50px;
+            height: 50px;
+            display: none;
+          
+            flex-direction: column;
+            justify-content: space-between;
+            cursor: pointer;
+            transition: transform 330ms ease-out;
+            .line {
+              background-color: #fff;
+              border-radius: 5px;
+              width: 100%;
+              height: 6px;
+              &.half {
+                width: 50%;
+              }
+              &.start {
+                transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+                transform-origin: right;
+              }
+              &.end {
+                align-self: flex-end;
+                transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+                transform-origin: left;
+              }
+            }
+            &.open {
+              transform: rotate(-45deg);
+              .line {
+                &.start {
+                  transform: rotate(-90deg) translateX(3px);
+                }
+                &.end {
+                  transform: rotate(-90deg) translateX(-3px);
+                }
+              }
+            }
+          }
+          
     }
 }
 // !header
+// adaptive header
+@include size-lg{
+    .section-header{
+        .header__nav{
+            .header__nav-list{
+                display: none;
+            }
+            .burger{
+                display: flex;
+                
+            }
+        }
+        .header__logo{
+            padding-top: 10px;
+            .logo{
+                height: 25vh;
+            }
+        }
+        
+    }
+}
+.section-header.open{
+    position: fixed;
+    background-color: rgba($color: $black-color, $alpha: 0.9);
+    height: 100%;
+    overflow: auto;
+    padding-top: 25px;
+    .section-header__container{
+        align-items: top;
+        justify-content: space-between;
+    }
+    .header__logo{
+        display: none;
+    }
+    .header__nav{
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: space-between;
+        .header__nav-list{
+            align-items: flex-start;
+            gap: 20px;
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+}
