--- a/#source/scss/main.scss
+++ b/#source/scss/main.scss
@@ -55,6 +55,7 @@
 /* ------------------------------------------------------------------------------------------start */
 .section-start{
     transition: all 0.5s;
+    padding: 0;
     .section-start__container{
         max-width: none;
         .section-start__title{
@@ -325,10 +326,14 @@
         .section-relax__list{
             display: flex;
             gap:50px;
-            flex-basis: 30%;
+            
+            flex-wrap: wrap;
+            
             .list__item{
                 border: 5px solid $red-color;
-                border-radius: 10px;
+                box-shadow: rgb(0 0 0 / 25%) 10px 10px 10px;
+                border-radius: 10px;flex-basis: 30%;
+
                 padding: 10px;
                 flex-grow: 1;
                 width: 100%;
@@ -340,6 +345,7 @@
                     margin-bottom: 20px;                    
                     flex-grow: 0;
                     align-items: center;
+                    
                     
                     img{
                         width: auto;
