--- a/#source/scss/variables.scss
+++ b/#source/scss/variables.scss
@@ -7,3 +7,8 @@ $black-text-color:#000000;
 $title-size: 70px;
 $font1: 'Montserrat';
 $font2: 'Oswald';
+$size-xs: 320px;
+$size-sm: 576px;
+$size-md: 768px;
+$size-lg: 992px;
+$size-xl: 1200px;
