--- a/#source/scss/calcs.scss
+++ b/#source/scss/calcs.scss
@@ -9,7 +9,7 @@
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
 .section-main{
-    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ), url(../img/calcs/calcs-bg-6.jpg) center 70% no-repeat;
+    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5) ), url(../img/calcs/calcs-bg.jpg) center 70% no-repeat;
     background-repeat: no-repeat;
     
     background-size: cover;
