--- a/css/calcs.css
+++ b/css/calcs.css
@@ -918,8 +918,8 @@ footer.site-footer .social-icons a.dribbble:hover {
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
 .section-main {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.5))), url(../img/calcs/calcs-bg-6.jpg) center 70% no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url(../img/calcs/calcs-bg-6.jpg) center 70% no-repeat;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.5))), url(../img/calcs/calcs-bg.jpg) center 70% no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url(../img/calcs/calcs-bg.jpg) center 70% no-repeat;
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 200px;
