--- a/#source/scss/pitanie.scss
+++ b/#source/scss/pitanie.scss
@@ -9,7 +9,7 @@
 /* ------------------------------------------------------------------------------------------ */
 /* ------------------------------------------------------------------------------------------main */
 .section-main{
-    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/img/pitanie/pitanie-bg.jpg) center no-repeat;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../img/pitanie/pitanie-bg.jpg) center no-repeat;
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
